Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-83456

QMake: qt.conf ignored if it contains BOM

XMLWordPrintable

    • Linux/X11, Windows
    • 9ba09e26d7fc667355d48a7d26361be6fb20612d (qt/qtbase/5.15)

      Example:

      $ file qt.conf
      qt.conf: UTF-8 Unicode (with BOM) text
      
      $ cat qt.conf
      [Paths]
      Prefix = /foo/bar
      
      $ ./qmake -query QT_INSTALL_PREFIX   # expected: /foo/bar
      /home/jil/Qt/5.14.2/gcc_64/bin

       

        For Gerrit Dashboard: QTBUG-83456
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            jil345 Jukka Lehtniemi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes